# ctf-backend

./: .gitignore  Cargo.toml
models/: Cargo.toml
models/src/: challenge.rs  event.rs  lib.rs  team.rs
src/: main.rs
src/api/: error.rs  mod.rs
src/api/events/: mod.rs
src/api/events/challenges/: mod.rs
src/api/teams/: mod.rs
src/models/: event.rs  mod.rs  team.rs
