[package]
name = "ctf-backend"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-rt = "2.1.0"
actix-web = "3.3.2"
anyhow = "1.0.39"
backend-models = { path = "models" }
butane = { version = "0.2.1", features = ["default", "pg"] }
chrono = "0.4.19"
env_logger = "0.8.3"
http = "0.2.3"
lazy_static = "1.4.0"
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"

[dev-dependencies]
actix-http = "2.2.0"

[workspace]
resolver = '2'
members = [
    "models",
]
